--- a/style.css/style.css
+++ b/style.css/style.css
@@ -12,7 +12,7 @@
 /*------------------------------------------------------------*/
 
 .body {
-  font-family: var(--mainfont) Verdana, Geneva, Tahoma;
+  font-family: var(--mainfont), sans-serif;
   color: var(--text-color);
 }
 
@@ -28,10 +28,6 @@
 /*------------------------------------------------------------*/
 
 /*Шапка сайта*/
-.head {
-  background-color: var(--team-color);
-
-}
 
 .top-head {
   display: flex;
@@ -47,6 +43,12 @@
 .second-logo {
   color: #000;
 
+}
+
+
+
+.second-logo-footer{
+  color: var(--background-main);
 }
 
 .logo {
@@ -86,6 +88,11 @@
   margin-left: 50px;
 
 }
+.menu-link,
+.activ{
+  color: var(--blue);
+
+}
 
 .menu-link {
   padding-top: 10px;
@@ -96,10 +103,12 @@
   line-height: 1.1;
   letter-spacing: 0.02em;
 
-  color: #212121;
+  color: var(--text-color);
   text-decoration: none;
   
 }
+
+
 
 .menu-link:hover,
 .menu-link:focus {
@@ -158,7 +167,7 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: var(--background-main);
 }
 
 .hero-button {
@@ -174,7 +183,7 @@
 
   border-style: inherit;
   background-color: var(--blue);
-  color: #ffffff;
+  color: var(--background-main);
 }
 
 /*------------------------------------------------------------*/
@@ -201,12 +210,13 @@
 
 }
 
-.cadvantages h3 {
+.advantages h3 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
 
 }
 
@@ -345,7 +355,7 @@
   line-height: 2;
   letter-spacing: 0.03em;
 
-  color: #ffffff;
+  color: var(--background-main);
 
 }
 
@@ -375,8 +385,6 @@
 /*------------------------------------------------------------*/
 .portfolio-main {
   padding-top: 90px;
-
-  background-color: #e5e5e5;
   
 }
 
@@ -392,11 +400,15 @@
   text-align: center;
   
 }
+.portfolio a{
+  text-decoration: none;
+  color: var(--text-color);
+}
 
 
 .portfolio > li {
 
-  margin-bottom: 70px;
+  margin-bottom: 30px;
   margin-right: 30px;
   width: calc((100% - 60px) /3);
 
@@ -410,6 +422,7 @@
 
 .portfolio-foto {
   width:100%;
+  
   
 }
 .portfolio-menu {
@@ -432,14 +445,14 @@
   text-align: center;
   letter-spacing: 0.03em;
 
-  background: #f5f4fa;
+  background: var(--team-color);
   
   cursor: pointer;
 }
 .portfolio-button:hover,
 .portfolio-button:focus {
-  color: #ffffff;
-  background: #2196f3;
+  color: var(--background-main);
+  background: var(--blue);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
