--- a/style.css/style.css
+++ b/style.css/style.css
@@ -20,34 +20,34 @@
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 0px;
   padding-left: 15px;
   padding-right: 15px;
-  /* border: 1px #000 solid; */
 }
 /*------------------------------------------------------------*/
 
 /*Шапка сайта*/
+.head {
+  border-bottom: 1px solid #ececec;
+}
+
+a {
+  text-decoration: none;
+}
 
 .top-head {
   display: flex;
   align-items: center;
-
 }
 
 .first-logo {
   color: var(--blue);
-
 }
 
 .second-logo {
   color: #000;
-
 }
 
-
-
-.second-logo-footer{
+.second-logo-footer {
   color: var(--background-main);
 }
 
@@ -59,17 +59,12 @@
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-
-}
-
-.logo a {
-  text-decoration: none;
-
 }
 
 .menu {
   display: flex;
   padding-left: 0;
+  margin: 0;
 
   font-weight: 500;
   font-size: 14px;
@@ -79,24 +74,22 @@
   list-style: none;
 }
 
-.menu a {
-  text-decoration: none;
-
-}
-
 .menu :not(:first-child) {
   margin-left: 50px;
-
 }
 .menu-link,
-.activ{
-  color: var(--blue);
+.activ {
+  padding: 32px 0;
 
+  display: block;
+
+  color: var(--blue);
 }
 
 .menu-link {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 32px 0;
+
+  display: block;
 
   font-weight: 500;
   font-size: 14px;
@@ -104,16 +97,11 @@
   letter-spacing: 0.02em;
 
   color: var(--text-color);
-  text-decoration: none;
-  
 }
-
-
 
 .menu-link:hover,
 .menu-link:focus {
   color: var(--blue);
-
 }
 
 .menu-tel {
@@ -124,12 +112,14 @@
 
   list-style: none;
 }
-
+.menu-tel {
+  gap: 50px;
+}
 
 .menu-number {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-left: 50px;
+  padding: 32px 0;
+
+  display: block;
 
   font-weight: 500;
   font-size: 14px;
@@ -137,7 +127,6 @@
   letter-spacing: 0.02em;
 
   color: #757575;
-  text-decoration: none;
 }
 
 .menu-number:hover,
@@ -156,10 +145,9 @@
   text-align: center;
 }
 .hero-text {
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 0;
   padding-top: 0;
-  
 
   font-weight: 900;
   font-size: 44px;
@@ -189,10 +177,9 @@
 /*------------------------------------------------------------*/
 /*Приимущества*/
 
-.advantages-block{
-  padding-top: 80px;
-  padding-bottom: 80px;
-
+.advantages-block {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .advantages {
@@ -207,20 +194,23 @@
   justify-content: space-between;
 
   list-style: none;
+}
 
+.advantages > li {
+  width: 270px;
 }
 
 .advantages h3 {
+  margin: 0 0 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
-
 }
 
 .advantages p {
+  margin: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -232,10 +222,8 @@
 /*------------------------------------------------------------*/
 /*Задачи*/
 
-.task-container{
-  padding-top:20px ;
-  padding-bottom: 90px;
-
+.task-container {
+  padding-bottom: 94px;
 }
 
 .task-text {
@@ -247,70 +235,79 @@
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
-
 }
 
 .task-photo {
-  padding-left: 0;
-  margin-bottom: 0;
-  margin-top: 0;
+  padding: 0;
+  margin: 0;
 
   display: flex;
-  justify-content: space-between;
-  
-  list-style: none;
 
+  gap: 30px;
+
+  list-style: none;
+}
+.task-photo img {
+  display: block;
 }
 
 /*------------------------------------------------------------*/
 /*Команда*/
 .team {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 
   background-color: var(--team-color);
-
 }
 .team-text {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
-
 }
 
 .team-photo {
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
+  padding: 0;
+  margin: 0;
 
   display: flex;
   justify-content: space-between;
 
   list-style: none;
-
 }
+.team-photo img {
+  width: 270px;
+}
+
+.team-title {
+  padding: 30px 5px;
+}
+
 .team-photo h3 {
+  margin: 0 0 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
-
 }
 
 .team-photo > li {
   background-color: var(--background-main);
-  
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
 .team-photo p {
+  margin: 0;
+
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -319,7 +316,6 @@
   letter-spacing: 0.03em;
 
   color: #757575;
-
 }
 /*------------------------------------------------------------*/
 /* Подвал */
@@ -328,24 +324,24 @@
   padding-bottom: 60px;
 
   background-color: var(--background-hero);
-
 }
 .footer-logo {
   padding-top: 0;
-  
+  margin-bottom: 20px;
+}
+.footer-logo h3 {
+  margin: 0;
 }
 
 .footer-adress {
   margin-top: 0;
   padding-left: 0;
-  
-  list-style: none;
 
+  list-style: none;
 }
 
 .footer-adress a {
   text-decoration: none;
-
 }
 
 .footer-adress-str {
@@ -356,13 +352,11 @@
   letter-spacing: 0.03em;
 
   color: var(--background-main);
-
 }
 
 .footer-adress-str:hover,
 .footer-adress-str:focus {
   color: var(--blue);
-
 }
 
 .footer-mail {
@@ -373,19 +367,16 @@
   letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
-
 }
 
 .footer-mail:hover,
 .footer-mail:focus {
   color: var(--blue);
-
 }
 
 /*------------------------------------------------------------*/
 .portfolio-main {
   padding-top: 90px;
-  
 }
 
 .portfolio {
@@ -398,32 +389,25 @@
 
   list-style: none;
   text-align: center;
-  
 }
-.portfolio a{
+.portfolio a {
   text-decoration: none;
   color: var(--text-color);
 }
 
-
 .portfolio > li {
-
   margin-bottom: 30px;
   margin-right: 30px;
-  width: calc((100% - 60px) /3);
+  width: calc((100% - 60px) / 3);
 
   background-color: var(--background-main);
-
 }
-.portfolio > li:nth-child(3n){
+.portfolio > li:nth-child(3n) {
   margin-right: 0;
-
 }
 
 .portfolio-foto {
-  width:100%;
-  
-  
+  width: 100%;
 }
 .portfolio-menu {
   display: flex;
@@ -431,7 +415,6 @@
   gap: 10px;
   margin-top: 0;
   list-style: none;
-
 }
 
 .portfolio-button {
@@ -446,7 +429,7 @@
   letter-spacing: 0.03em;
 
   background: var(--team-color);
-  
+
   cursor: pointer;
 }
 .portfolio-button:hover,
