--- a/style.css/style.css
+++ b/style.css/style.css
@@ -34,6 +34,19 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+  padding: 0;
+  margin: 0;
+}
+
 .top-head {
   display: flex;
   align-items: center;
@@ -64,14 +77,11 @@ a {
 .menu {
   display: flex;
   padding-left: 0;
-  margin: 0;
 
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
-
-  list-style: none;
 }
 
 .menu :not(:first-child) {
@@ -109,8 +119,6 @@ a {
 
   margin-left: auto;
   padding-left: 0;
-
-  list-style: none;
 }
 .menu-tel {
   gap: 50px;
@@ -145,10 +153,6 @@ a {
   text-align: center;
 }
 .hero-text {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 0;
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
@@ -183,17 +187,10 @@ a {
 }
 
 .advantages {
-  /* text-align: center; */
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
   gap: 30px;
-  padding-top: 0;
 
   display: flex;
   justify-content: space-between;
-
-  list-style: none;
 }
 
 .advantages > li {
@@ -201,7 +198,7 @@ a {
 }
 
 .advantages h3 {
-  margin: 0 0 10px;
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -210,7 +207,6 @@ a {
 }
 
 .advantages p {
-  margin: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -227,7 +223,6 @@ a {
 }
 
 .task-text {
-  margin-top: 0;
   margin-bottom: 50px;
 
   font-weight: 700;
@@ -244,8 +239,6 @@ a {
   display: flex;
 
   gap: 30px;
-
-  list-style: none;
 }
 .task-photo img {
   display: block;
@@ -260,7 +253,6 @@ a {
   background-color: var(--team-color);
 }
 .team-text {
-  margin-top: 0;
   margin-bottom: 60px;
 
   font-weight: 700;
@@ -276,8 +268,6 @@ a {
 
   display: flex;
   justify-content: space-between;
-
-  list-style: none;
 }
 .team-photo img {
   width: 270px;
@@ -288,7 +278,7 @@ a {
 }
 
 .team-photo h3 {
-  margin: 0 0 10px;
+  margin-bottom: 10px;
 
   font-weight: 500;
   font-size: 16px;
@@ -336,10 +326,7 @@ a {
 .footer-adress {
   margin-top: 0;
   padding-left: 0;
-
-  list-style: none;
 }
-
 
 .footer-adress-str {
   font-style: normal;
@@ -411,14 +398,12 @@ a {
   justify-content: center;
   gap: 10px;
   margin-top: 0;
-  list-style: none;
 }
 
 .portfolio-button {
   margin-top: 0;
   border-radius: 4px;
 
-  /* font-style: normal; */
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
