--- a/style.css/style.css
+++ b/style.css/style.css
@@ -253,7 +253,7 @@ ul {
   background-color: var(--team-color);
 }
 .team-text {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 
   font-weight: 700;
   font-size: 36px;
@@ -269,8 +269,9 @@ ul {
   display: flex;
   justify-content: space-between;
 }
+
 .team-photo img {
-  width: 270px;
+  display: block;
 }
 
 .team-title {
@@ -296,9 +297,6 @@ ul {
 }
 
 .team-photo p {
-  margin: 0;
-
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.2;
@@ -315,20 +313,21 @@ ul {
 
   background-color: var(--background-hero);
 }
-.footer-logo {
-  padding-top: 0;
+
+.second {
+  display: inline-block;
+
   margin-bottom: 20px;
-}
-.footer-logo h3 {
-  margin: 0;
 }
 
 .footer-adress {
-  margin-top: 0;
   padding-left: 0;
 }
 
 .footer-adress-str {
+  display: inline-block;
+  margin-bottom: 9px;
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -344,13 +343,19 @@ ul {
 }
 
 .footer-mail {
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 2;
   letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
+}
+.footer-mail {
+  margin-bottom: 9px;
+  display: inline-block;
+}
+.footer-mail[href^="tel:+380991111111"] {
+  margin-bottom: 0;
 }
 
 .footer-mail:hover,
@@ -359,51 +364,73 @@ ul {
 }
 
 /*------------------------------------------------------------*/
-.portfolio-main {
-  padding-top: 90px;
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .portfolio {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 370px);
+  grid-gap: 30px;
+}
+.portfolio-foto {
+  display: block;
+  width: 100%;
+}
 
-  padding-left: 0px;
-  margin-top: 35px;
-  margin-bottom: 0;
+.portfolio-title {
+  padding-top: 20px;
+  padding-bottom: 20px;
 
-  list-style: none;
-  text-align: center;
+  background: #ffffff;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+.portfolio-title h3 {
+  margin-bottom: 4px;
+  margin-left: 24px;
+
+  font-family: var(--mainfont);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: var(--text-color);
+}
+.portfolio-title p {
+  margin-left: 24px;
+
+  font-family: var(--mainfont);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 .portfolio a {
-  text-decoration: none;
   color: var(--text-color);
 }
 
 .portfolio > li {
-  margin-bottom: 30px;
-  margin-right: 30px;
-  width: calc((100% - 60px) / 3);
-
   background-color: var(--background-main);
 }
-.portfolio > li:nth-child(3n) {
-  margin-right: 0;
-}
 
-.portfolio-foto {
-  width: 100%;
-}
 .portfolio-menu {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 8px;
   margin-top: 0;
 }
 
 .portfolio-button {
+  padding: 6px 22px;
   margin-top: 0;
+  margin-bottom: 50px;
   border-radius: 4px;
 
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -414,6 +441,7 @@ ul {
 
   cursor: pointer;
 }
+
 .portfolio-button:hover,
 .portfolio-button:focus {
   color: var(--background-main);
